{
    "name": "SharedCursor",
    "maps": [
        {
            "name": "PlayerOne",
            "id": "96c46164-6a8f-4756-b4de-0da7edff9ce9",
            "actions": [
                {
                    "name": "HotizontalMovement",
                    "type": "Value",
                    "id": "7202ffd9-950c-4bf1-9a7f-29a08dea94d6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Grap",
                    "type": "Button",
                    "id": "ca5f335b-5eaa-41f4-9aa1-7f7517338242",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "LeftKeyboard",
                    "id": "e7c293e0-4a38-444b-ace4-6495bf48580e",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HotizontalMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "ca4224de-e3de-42d5-bf0e-9b950ea21a11",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HotizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "a901ebb1-e0a0-4f01-86f6-832e1eb3df4a",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HotizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "6041ec30-d57c-4895-833e-d008a214dd83",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Grap",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerTwo",
            "id": "17876003-69ae-4b7b-a1c0-c67503c5c186",
            "actions": [
                {
                    "name": "VerticalMovement",
                    "type": "Value",
                    "id": "9eef5370-f4ab-4d56-9846-50d79cc27871",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Grap",
                    "type": "Button",
                    "id": "6466567e-63e2-4bb7-9c6b-7e83fdc959dd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "rightKeyboard",
                    "id": "0756644f-4455-4a34-bfda-f925fb0e51ac",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VerticalMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "133442a8-9d2e-468f-af11-5cf48adb01db",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VerticalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "1f38c17b-e9bf-49d8-a7fa-82f054dbb52a",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VerticalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "6099649b-9fc6-4963-89eb-bf8f0641945a",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Grap",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}